--- a/src/styles/common/_app.sass
+++ b/src/styles/common/_app.sass
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css)
+
 $timing-basic: 100ms ease-out
 $timing-slow: 200ms ease-out
 
@@ -14,6 +16,7 @@ $timing-slow: 200ms ease-out
 html
   color: $color-base
   font-size: $font-size-base
+  font-family: 'Noto Sans Japanese', sans-serif
 
 input
   font-size: $font-size-base
