--- a/src/styles/common/_app.sass
+++ b/src/styles/common/_app.sass
@@ -11,7 +11,7 @@ $timing-slow: 200ms ease-out
   text-rendering: optimizeLegibility
   font-smoothing: antialiased
   font-feature-settings: 'liga'
-  vertical-align: text-top
+  vertical-align: bottom
 
 html
   color: $color-base
